[project]
name = "wsts-regression"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "pandas-stubs==2.3.2.250926",
    "pyproj>=3.7.2",
    "rasterio>=1.4.3",
    "scikit-learn>=1.7.2",
]
