[project]
name = "wsts-regression"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "h5py>=3.15.1",
    "jupyterlab-lsp>=5.2.0",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "pandas-stubs==2.3.2.250926",
    "pyarrow>=22.0.0",
    "pyogrio>=0.11.1",
    "pyproj>=3.7.2",
    "pyright>=1.1.407",
    "rasterio>=1.4.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
]
